--- a/Gulxanim.css
+++ b/Gulxanim.css
@@ -6,8 +6,6 @@
 }
 body {
     margin: 0 6rem;
-    /* background-color: #8BC6EC;
-    background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%); */
 }
 
 #container {
@@ -23,7 +21,7 @@ body {
 .inner-container {
     width: 20%;
     border-radius: 10px;
-    background-color:  bisque; 
+    background-color:  rgba(186, 185, 185, 0.611); 
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
