--- a/style.css
+++ b/style.css
@@ -107,7 +107,21 @@ body {
 #main {
     display: flex;
     gap: 8rem;
-    border: 1px solid black;
+}
+
+header {
+    margin-bottom: 5rem
+}
+
+.btn-back {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    padding: 0.5rem 3rem;
+    background: transparent;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin-bottom: 3rem;
 }
 
 #detail-flag {
@@ -120,7 +134,6 @@ body {
 }
 
 #detail-info {
-    border: 1px solid gray;
     width: 100%;
 }
 
@@ -130,4 +143,7 @@ body {
 }
 #sub-detail span {
     font-weight: 400;
+}
+.bordersDiv {
+    margin-top: 5rem;
 }
